@@ -1,5 +1,5 @@
 Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
-Source: http://www.spinnaker.de/lbdb/
+Source: https://www.spinnaker.de/lbdb/
 Comment: It was formerly downloaded from
  ftp://riemann.iam.uni-bonn.de/pub/users/roessler/lbdb-0.11.tgz
 
